fix slider z-index

--- a/src/components/slider/slider.css
+++ b/src/components/slider/slider.css
@@ -9,7 +9,7 @@
   box-shadow: 0px 0px 10px 1px lightgray;
 
   .full-slider {
-    z-index: inherit;
+    z-index: 1001;
     position: absolute;
     width: 100%;
     height: 100vh;
